Fixing code overflow.

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -503,6 +503,7 @@ section {
         margin: 0 0 1.5rem 0;
         padding: 1rem;
         white-space: pre;
+        overflow:auto;
     }
 
     .table_container {
